# try-diesel-rocket-api

./: .env  Cargo.toml  README.md  docker-compose.yml
docker/db/init/: 1_init.sql
src/: main.rs  models.rs
