[package]
name = "rust-diesel-rocket-api"
version = "0.0.0"
authors = ["user-name <user@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
